--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New micropost</h1>
+<h1>新微博</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', microposts_path %>
+<%= link_to '返回', microposts_path %>
