--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing micropost</h1>
+<h1>编辑微博</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @micropost %> |
-<%= link_to 'Back', microposts_path %>
+<%= link_to '显示', @micropost %> |
+<%= link_to '返回', microposts_path %>
