--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing microposts</h1>
+<h1>我的微博列表</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Content</th>
-      <th>User</th>
+      <th>微博内容</th>
+      <th>用户</th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= micropost.content %></td>
         <td><%= micropost.user_id %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '查看', micropost %></td>
+        <td><%= link_to '编辑', edit_micropost_path(micropost) %></td>
+        <td><%= link_to '删除', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<%= link_to '新微博', new_micropost_path %>
