--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Content:</strong>
+  <strong>内容:</strong>
   <%= @micropost.content %>
 </p>
 
 <p>
-  <strong>User:</strong>
+  <strong>用户:</strong>
   <%= @micropost.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_micropost_path(@micropost) %> |
-<%= link_to 'Back', microposts_path %>
+<%= link_to '编辑', edit_micropost_path(@micropost) %> |
+<%= link_to '返回', microposts_path %>
