--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,4 +1,6 @@
-<h1>我的微博列表</h1>
+<header>
+  <h1>我的微博列表</h1>
+</header>
 
 <table>
   <thead>
@@ -25,5 +27,6 @@
 </table>
 
 <br>
-
-<%= link_to '新微博', new_micropost_path %>
+<div id="new-micropost">
+  <%= link_to '新微博', new_micropost_path %>
+</div>
