--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -1,3 +1,24 @@
-// Place all the styles related to the Microposts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+header {
+  background: url("http://warlock-course.qiniudn.com/background.png") no-repeat;
+  min-height: 300px;
+  overflow: hidden;
+
+  h1 {
+    margin-top: 60px;
+    text-align: right;
+    padding-right: 40px;
+  }
+}
+
+table {
+  width: 100%
+}
+
+table thead tr {
+  text-align: left;
+}
+
+#new-micropost {
+  text-align: right;
+  padding-right: 40px;
+}
