--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,32 +1,29 @@
 <header>
   <h1>我的微博列表</h1>
 </header>
-
-<table>
-  <thead>
-    <tr>
-      <th>微博内容</th>
-      <th>用户</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div id="main-body">
+  <div id="micropost-main-list">
     <% @microposts.each do |micropost| %>
-      <tr>
-        <td><%= micropost.content %></td>
-        <td><%= micropost.user_id %></td>
-        <td><%= link_to '查看', micropost %></td>
-        <td><%= link_to '编辑', edit_micropost_path(micropost) %></td>
-        <td><%= link_to '删除', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="micropost-iterm">
+      <div class="micropost-content">
+        <%= micropost.content %>
+      </div>
 
-<br>
-<div id="new-micropost">
-  <%= link_to '新微博', new_micropost_path %>
+      <div class="micropost-user">
+        <%= micropost.user_id %>
+      </div>
+
+      <div class="micropost-action">
+        <%= link_to '查看', micropost %>
+        <%= link_to '编辑', edit_micropost_path(micropost) %>
+        <%= link_to '删除', micropost, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+  <div id="new-micropost">
+    <%= link_to '新微博', new_micropost_path %>
+  </div>
+
 </div>
