remove box shadow

--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -24,7 +24,7 @@ body #main-body{
       margin: 20px;
       min-height: 60px;
       padding: 10px;
-      box-shadow:1px 1px 1px 1px #888888;
+      background-color: aliceblue;
 
       .micropost-user {
           text-align: right;
