--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -1,12 +1,15 @@
 header {
-  background: url("http://warlock-course.qiniudn.com/background.png") no-repeat;
+  background: url("http://warlock-course.qiniudn.com/wide-wallpaper.jpg") no-repeat;
   min-height: 300px;
   overflow: hidden;
+  background-position-y: -600px;
+  background-position-x: -220px;
+  color: white;
 
   h1 {
-    margin-top: 60px;
+    margin-top: 200px;
     text-align: right;
-    padding-right: 40px;
+    padding-right: 105px;
   }
 }
 
