still in index page

--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -28,6 +28,7 @@ body #main-body{
   width: 100%;
 
     .micropost-iterm:first-child {
+      background-color: cornsilk;
       textarea {
         width: 90%;
       }
