--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -4,10 +4,21 @@ header {
   background-position-y: -600px;
   background-position-x: -220px;
   color: white;
+  min-width: 1000px;
   transition: background-position-x 2s ease;
 
+  .micropost-create-form {
+    width: 1000px;
+    margin: auto;
+    background-color: rgba(0,0,0,0.25);
+    padding: 10px;
+
+    textarea {
+      width: 95%;
+    }
+  }
+
   h1 {
-    margin-top: 200px;
     margin-bottom: 40px;
     text-align: right;
     padding-right: 105px;
@@ -26,13 +37,6 @@ body #main-body{
 
   #micropost-main-list {
   width: 100%;
-
-    .micropost-iterm:first-child {
-      background-color: cornsilk;
-      textarea {
-        width: 90%;
-      }
-    }
 
     .micropost-iterm {
       margin-top: 20px;
