--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -12,14 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :content %><br>
+    <%= f.label :新微博 %><br>
     <%= f.text_area :content %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
+    <%= f.label :用户 %><br>
     <%= f.number_field :user_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :发布%>
   </div>
 <% end %>
