--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -163,9 +163,11 @@
     margin-top: 240px;
     overflow: hidden;
     font-size: 24px;
+    line-height: 30px;
 
     #micropost-main-list {
       width: 100%;
+      padding-top: 20px;
 
       .micropost-iterm {
         margin-top: 10px;
