--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -4,7 +4,7 @@
     <%= render 'form' %>
   </div>
 
-  <h1>我的微博列表</h1>
+  <h1>微博列表</h1>
 </header>
 <div id="main-body">
   <div id="micropost-main-list">
