--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>占红来的微博</title>
+  <title>草莓豆豆龙</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <link rel="shortcut icon" type="image/png" href="http://7aro2k.com1.z0.glb.clouddn.com/smile.png">
 </head>
 <body>
 
